--- a/src/main/webapp/main/index.html
+++ b/src/main/webapp/main/index.html
@@ -25,14 +25,13 @@
 			<div class="logo">
 				<span>碳素管理系统</span>
 			</div>
-			<div class="system-icon">
-				<span><i class="icon-bell"></i></span>
-				<span><i class="icon-off"></i> 登出</span>
-		    </div>
 		    <div class="login-info">
 		    	<span><i class="icon-user"></i> 管理员，欢迎您！</span>
 		    </div>
-			<ul class="main-menu"></ul>
+			<ul class="main-menu">
+				<li><span><i class="icon-bell"></i></span></li>
+				<li><span><i class="icon-off"></i></span></li>
+			</ul>
 		</div>
 		<div data-options="region:'west',border:false" class="lay-left">
 			<div class="easyui-accordion" data-options="fit:true,border:false">
@@ -45,12 +44,6 @@
 		<div data-options="region:'south',border:false" class="lay-bottom">
 			<p>&copy;大数洞察 2016</p>
 		</div>
-		<!-- tpl -->
-		<script id="main_menu_tpl" type="text/tpl">
-			{{# for(var i = 0, len = d.length; i < len; i++){ }}
-				<li class="nav-item" data-href-index="{{ i }}"><span><i class="{{ d[i].icon }}"></i> {{ d[i].name }}</span></li>
-			{{# } }}
-		</script>
 		<script id="sub_menu_tpl" type="text/tpl">
 			{{# for(var i = 0, len = d.length; i < len; i++){ }}
 				<li class="nav-item" data-href="{{ d[i].href }}" data-id="{{ d[i].id }}">
@@ -65,6 +58,7 @@
 		src="${baseUrl}/static/lib/easyui/jquery.easyui.min.js"></script>
 		<script type="text/javascript" src="${baseUrl}/static/js/json2.js"></script>
 		<script type="text/javascript" src="${baseUrl}/static/js/laytpl.js"></script>
+		<script type="text/javascript" src="${baseUrl}/static/lib/layer/layer.js"></script>
 		<script type="text/javascript" src="${baseUrl}/static/js/main.js"></script>
 		<script type="text/javascript">
 				var baseUrl = '${baseUrl}';
