--- a/src/main/webapp/layout.htm
+++ b/src/main/webapp/layout.htm
@@ -17,7 +17,7 @@
 		var baseUrl = '${baseUrl}';
 	</script>
 </head>
-<body>
+<body class="easyui-layout">
 	<@block name="body"></@block>
 	
 	<script type="text/javascript" src="${baseUrl}/static/lib/easyui/jquery.min.js"></script>
