--- a/src/main/webapp/config/index.htm
+++ b/src/main/webapp/config/index.htm
@@ -1,23 +1,10 @@
-<!doctype html>
-<html>
-<head>
-<title>CRM</title>
-<meta http-equiv="content-type" content="text/html; charset=UTF-8">
-<meta http-equiv="keywords" content="CRM">
-<meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
-<meta name="renderer" content="webkit">
-<link rel="shortcut icon" href="${baseUrl}/static/img/favicon.ico" />
-<link rel="stylesheet" type="text/css" href="${baseUrl}/static/easyui/themes/gray/easyui.css">
-<link rel="stylesheet" type="text/css" href="${baseUrl}/static/easyui/themes/icon.css">
-<link rel="stylesheet" type="text/css" href="${baseUrl}/static/awesome/css/font-awesome.min.css" />
-<link rel="stylesheet" type="text/css" href="${baseUrl}/static/modules/crm/css/crm.css">
-<script type="text/javascript">
-	var baseUrl = '${baseUrl}';
-</script>
-</head>
-<body class="easyui-layout">
-	<div id="loading">
-		<img src='${baseUrl}/static/img/gif/pageload/wheel.gif'/>
+<@override name="title">管理控制台</@override>
+<@override name="outCss">
+<link rel="stylesheet" type="text/css" href="${baseUrl}/static/css/config.css">
+</@override>
+<@override name="body">
+<div id="loading">
+		<img src='${baseUrl}/static/img/loading/wheel.gif'/>
 		<h1><font color="#15428B">加载中···</font></h1>
 	</div>
         <div data-options="region:'north',height:100">
@@ -36,8 +23,8 @@
         	<div title="首页">
 	        </div>
         </div>
-	<script type="text/javascript" src="${baseUrl}/static/easyui/jquery.min.js"></script>
-    <script type="text/javascript" src="${baseUrl}/static/easyui/jquery.easyui.min.js"></script>
-	<script type="text/javascript" src="${baseUrl}/static/modules/crm/js/crm.js"></script>
-</body>
-</html>
+</@override>
+<@override name="outJs">
+	<script type="text/javascript" src="${baseUrl}/static/js/config.js"></script>
+</@override>
+<@extends name="layout.htm"/>
