--- a/src/main/webapp/config/index.htm
+++ b/src/main/webapp/config/index.htm
@@ -1,28 +1,29 @@
 <@override name="title">管理控制台</@override>
 <@override name="outCss">
-<link rel="stylesheet" type="text/css" href="${baseUrl}/static/css/config.css">
+	<link rel="stylesheet" type="text/css" href="${baseUrl}/static/lib/fontawesome/css/font-awesome.min.css">
+	<link rel="stylesheet" type="text/css" href="${baseUrl}/static/css/config.css">
 </@override>
 <@override name="body">
-<div id="loading">
+	<div id="loading">
 		<img src='${baseUrl}/static/img/loading/wheel.gif'/>
 		<h1><font color="#15428B">加载中···</font></h1>
 	</div>
-        <div data-options="region:'north',height:100">
-        	<div style="padding:5px; position: absolute; bottom: 0px; right: 0px;">
-		        <a href="javascript:void(0);" class="easyui-linkbutton" data-options="plain:true,iconCls:'fa fa-bell-o fa-lg'"></a>
-		        <a href="${baseUrl}/security/signout" class="easyui-linkbutton" data-options="plain:true,iconCls:'fa fa-power-off fa-lg',text:'退出'"></a>
-    		</div>
+    <div id="nav_bar" data-options="region:'north',height:100,border:false">
+    	<div style="padding:5px; position: absolute; bottom: 0px; right: 0px;">
+	        <a href="javascript:void(0);" class="easyui-linkbutton" data-options="plain:true,iconCls:'fa fa-bell-o fa-lg'"></a>
+	        <a href="${baseUrl}/wx/system/signout" class="easyui-linkbutton" data-options="plain:true,iconCls:'fa fa-power-off fa-lg',text:'退出'"></a>
+		</div>
+    </div>
+    <div id="status_bar" data-options="region:'south',height:20,border:false">
+    	<span><i class="fa fa-user"></i> 当前用户：<@shiro.principal/> (${role})</span>
+    </div>
+    <div class="easyui-tabs" data-options="region:'west',width:230,pill:true,border:false">
+        <div class="easyui-accordion" id="menu_accordion" data-options="fit:true,iconCls:'fa fa-bars',border:false,title:'菜单'"></div>
+    </div>
+    <div class="easyui-tabs" id="main_tab" data-options="region:'center',pill:true,border:false">
+    	<div title="首页">
         </div>
-        <div data-options="region:'south',height:20" id="_status_bar">
-        	<span><i class="fa fa-user"></i> 当前用户：<@shiro.principal/> (${role})</span>
-        </div>
-        <div class="easyui-tabs" data-options="region:'west',width:230,pill:true">
-	        <div title="菜单" class="easyui-accordion" id="_menu_accordion" data-options="fit:true,iconCls:'fa fa-bars'"></div>
-        </div>
-        <div class="easyui-tabs" data-options="region:'center',pill:true" id="_main_tab">
-        	<div title="首页">
-	        </div>
-        </div>
+    </div>
 </@override>
 <@override name="outJs">
 	<script type="text/javascript" src="${baseUrl}/static/js/config.js"></script>
