--- a/src/main/webapp/config/url.htm
+++ b/src/main/webapp/config/url.htm
@@ -1,17 +1,17 @@
-<table id="_sys_url_table"></table>
-<script type="text/javascript" src="${baseUrl}/static/easyui/ext/datagrid-cellediting.js"></script>
+<table id="url_table"></table>
+<script type="text/javascript" src="${baseUrl}/static/lib/easyui/ext/datagrid-cellediting.js"></script>
 <script>
 (function(divId){
 	var url_type_data,permission_data;
 	$.ajaxSetup({
 		async:false
 	});
-	$.post( baseUrl+'/system/url_type/get', {
+	$.post( baseUrl+'/wx/config/urltype_get', {
     	pagination:0
 	}, function(data) {
 		url_type_data = data;
 	});
-    $.post( baseUrl+'/system/permission/get', {
+    $.post( baseUrl+'/wx/config/permission_get', {
     	pagination:0
 	}, function(data) {
 		permission_data = data;
@@ -59,7 +59,7 @@
     };
     
 	$(divId).datagrid({
-	    url:baseUrl+'/system/url/get',
+	    url:baseUrl+'/wx/config/url_get',
 	    columns:[[
 			{field:'checkbox',checkbox:true},
 	        {field:'id',title:'ID',width:35},
@@ -120,7 +120,7 @@
 		var insertRows = $(divId).datagrid('getChanges', 'inserted');
 		var updateRows = $(divId).datagrid('getChanges', 'updated');
 		var deleteRows = $(divId).datagrid('getChanges', 'deleted');
-		$.post(baseUrl+"/system/url/save", {
+		$.post(baseUrl+"/wx/config/url_save", {
 			inserted : JSON.stringify(insertRows),
 			updated : JSON.stringify(updateRows),
 			deleted : JSON.stringify(deleteRows)
@@ -144,5 +144,5 @@
 	function refreshTable() {
 		$(divId).datagrid('reload');
 	}
-})('#_sys_url_table');
+})('#url_table');
 </script>
