--- a/src/main/webapp/config/user.htm
+++ b/src/main/webapp/config/user.htm
@@ -60,6 +60,8 @@
 	    queryParams:{
 	    	pagination:1
 	    },
+	    pageSize:25,
+	    pageList:[25,50,75,100],
 	    pagination:true,
 	    pagePosition:'top',
 	    footbar:'#pw-tool'
