--- a/src/main/webapp/config/conf-type.htm
+++ b/src/main/webapp/config/conf-type.htm
@@ -1,9 +1,9 @@
-<table id="_system_config_type_table"></table>
-<script type="text/javascript" src="${baseUrl}/static/easyui/ext/datagrid-cellediting.js"></script>
+<table id="config_type_table"></table>
+<script type="text/javascript" src="${baseUrl}/static/lib/easyui/ext/datagrid-cellediting.js"></script>
 <script>
 	(function(divId){
 		$(divId).datagrid({
-		    url:baseUrl+'/system/config_type/get',
+		    url:baseUrl+'/wx/config/conftype_get',
 		    columns:[[
 		        {field:'checkbox',checkbox:true},
 		        {field:'cfg_type_id',title:'ID',width:35},
@@ -12,6 +12,8 @@
 		    queryParams:{
 		    	pagination:1
 		    },
+		    pageSize:25,
+		    pageList:[25,50,75,100],
 		    pagination:true,
 		    pagePosition:'top'
 		}).datagrid('enableCellEditing');
@@ -58,7 +60,7 @@
 			var insertRows = $(divId).datagrid('getChanges', 'inserted');
 			var updateRows = $(divId).datagrid('getChanges', 'updated');
 			var deleteRows = $(divId).datagrid('getChanges', 'deleted');
-			$.post(baseUrl+"/system/config_type/save", {
+			$.post(baseUrl+"/wx/config/conftype_save", {
 				inserted : JSON.stringify(insertRows),
 				updated : JSON.stringify(updateRows),
 				deleted : JSON.stringify(deleteRows)
@@ -82,5 +84,5 @@
 		function refreshTable() {
 			$(divId).datagrid('reload');
 		}
-	})('#_system_config_type_table');
+	})('#config_type_table');
 </script>
