--- a/src/main/webapp/config/qa-content.htm
+++ b/src/main/webapp/config/qa-content.htm
@@ -42,6 +42,8 @@
 		    queryParams:{
 		    	pagination:1
 		    },
+		    pageSize:25,
+		    pageList:[25,50,75,100],
 		    pagination:true,
 		    pagePosition:'top'
 		}).datagrid('enableCellEditing');
