--- a/src/main/webapp/config/qa-type.htm
+++ b/src/main/webapp/config/qa-type.htm
@@ -12,6 +12,8 @@
 		    queryParams:{
 		    	pagination:1
 		    },
+		    pageSize:25,
+		    pageList:[25,50,75,100],
 		    pagination:true,
 		    pagePosition:'top'
 		}).datagrid('enableCellEditing');
