--- a/src/main/webapp/config/index.htm
+++ b/src/main/webapp/config/index.htm
@@ -11,7 +11,7 @@
     <div id="nav_bar" data-options="region:'north',height:100,border:false">
     	<div style="padding:5px; position: absolute; bottom: 0px; right: 0px;">
 	        <a href="javascript:void(0);" class="easyui-linkbutton" data-options="plain:true,iconCls:'fa fa-bell-o fa-lg'"></a>
-	        <a href="${baseUrl}/wx/system/signout" class="easyui-linkbutton" data-options="plain:true,iconCls:'fa fa-power-off fa-lg',text:'退出'"></a>
+	        <a href="${baseUrl}/system/signout" class="easyui-linkbutton" data-options="plain:true,iconCls:'fa fa-power-off fa-lg',text:'退出'"></a>
 		</div>
     </div>
     <div id="status_bar" data-options="region:'south',height:20,border:false">
