--- a/src/main/webapp/system/login.htm
+++ b/src/main/webapp/system/login.htm
@@ -103,7 +103,7 @@ a:focus {
 <div class="container">
 	<div class="ad"></div>
 	<div id="win_login">
-		<form action="${baseUrl}/wx/system/signin" method="post">
+		<form action="${baseUrl}/system/signin" method="post">
 			<p class="error-msg">${errorMsg}</p>
 			<input id="username" name="username" type="text">
 			<input id="password" name="password" type="text">
