--- a/src/main/webapp/config/url.htm
+++ b/src/main/webapp/config/url.htm
@@ -6,12 +6,12 @@
 	$.ajaxSetup({
 		async:false
 	});
-	$.post( baseUrl+'/wx/config/urltype_get', {
+	$.post( baseUrl+'/config/urltype_get', {
     	pagination:0
 	}, function(data) {
 		url_type_data = data;
 	});
-    $.post( baseUrl+'/wx/config/permission_get', {
+    $.post( baseUrl+'/config/permission_get', {
     	pagination:0
 	}, function(data) {
 		permission_data = data;
@@ -59,7 +59,7 @@
     };
     
 	$(divId).datagrid({
-	    url:baseUrl+'/wx/config/url_get',
+	    url:baseUrl+'/config/url_get',
 	    columns:[[
 			{field:'checkbox',checkbox:true},
 	        {field:'id',title:'ID',width:35},
@@ -122,7 +122,7 @@
 		var insertRows = $(divId).datagrid('getChanges', 'inserted');
 		var updateRows = $(divId).datagrid('getChanges', 'updated');
 		var deleteRows = $(divId).datagrid('getChanges', 'deleted');
-		$.post(baseUrl+"/wx/config/url_save", {
+		$.post(baseUrl+"/config/url_save", {
 			inserted : JSON.stringify(insertRows),
 			updated : JSON.stringify(updateRows),
 			deleted : JSON.stringify(deleteRows)
