--- a/src/main/webapp/data/wx-user.htm
+++ b/src/main/webapp/data/wx-user.htm
@@ -6,7 +6,7 @@
 		});
 
 		$(divId).datagrid({
-			url : baseUrl + '/wx/config/wxuser_get',
+			url : baseUrl + '/config/wxuser_get',
 			columns : [ [ {
 				field : 'wc_openid',
 				title : 'OPENID',
