--- a/src/main/webapp/layout.htm
+++ b/src/main/webapp/layout.htm
@@ -22,6 +22,7 @@
 	
 	<script type="text/javascript" src="${baseUrl}/static/lib/easyui/jquery.min.js"></script>
 	<script type="text/javascript" src="${baseUrl}/static/lib/easyui/jquery.easyui.min.js"></script>
+	<script type="text/javascript" src="${baseUrl}/static/lib/lazyload/lazyload.js"></script>
 	<@block name="outJs"></@block>
 	<script type="text/javascript">
 		<@block name="inJs"></@block>
